# cl-test

./: .gitignore  Makefile  README.md  docker-compose.yaml  hello.py  pyproject.toml
.github/workflows/: code-quality-checks.yaml
app/: example.env  hello.py  manage.py
app/example/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
app/example/settings/: __init__.py  base.py  celery.py  environment.py  restframework.py
app/questions/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/questions/migrations/: 0001_initial.py  0002_alter_choice_question_questiongroupobjectpermission_and_more.py  0003_alter_choice_question.py
app/questions/templates/: base.html
app/questions/templates/questions/: question_list.html
app/questions/tests/: conftest.py  test_filter_by_permissions.py  test_questions_api.py
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py  0002_alter_exampleuser_groups.py
