[project]
name = "cloud-linux-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "B", "I"]


[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = 'preserve'

[tool.mypy]
strict = true
